@startuml

title __SD_ASSIGNMENT_1's Class Diagram__\n

  namespace application {
    class application.Main {
    }
  }
  

  namespace business {
    class business.UserService {
    }
  }
  

  namespace business {
    class business.VacationDestinationPackageService {
    }
  }
  

  namespace business {
    class business.VacationDestinationService {
    }
  }
  

  namespace controller {
    class controller.MainController {
    }
  }
  

  namespace controller {
    class controller.UserController {
    }
  }
  

  namespace controller {
    class controller.VacationDestinationController {
    }
  }
  

  namespace controller {
    class controller.VacationDestinationPackageController {
    }
  }
  

  namespace model {
    class model.TravelAgency {
    }
  }
  

  namespace model {
    class model.User {
    }
  }
  

  namespace model {
    class model.VacationDestination {
    }
  }
  

  namespace model {
    class model.VacationDestinationPackage {
    }
  }
  

  namespace repository {
    class repository.UserRepository {
    }
  }
  

  namespace repository {
    class repository.VacationDestinationPackageRepository {
    }
  }
  

  namespace repository {
    class repository.VacationDestinationRepository {
    }
  }
  

  namespace view {
    class view.LogInWindow {
    }
  }
  

  namespace view {
    class view.TravelAgencyWindow {
    }
  }
  

  namespace view {
    class view.UserWindow {
    }
  }
  

  business.UserService o-- repository.UserRepository : userRepository
  business.VacationDestinationPackageService o-- repository.VacationDestinationPackageRepository : vacationDestinationPackageRepository
  business.VacationDestinationService o-- repository.VacationDestinationRepository : vacationDestinationRepository
  controller.MainController o-- view.LogInWindow : logInWindow
  controller.MainController o-- view.TravelAgencyWindow : travelAgencyWindow
  controller.MainController o-- controller.UserController : userController
  controller.MainController o-- controller.VacationDestinationController : vacationDestinationController
  controller.MainController o-- controller.VacationDestinationPackageController : vacationDestinationPackageController
  controller.UserController o-- business.UserService : userService
  controller.VacationDestinationController o-- business.VacationDestinationService : vacationDestinationService
  controller.VacationDestinationPackageController o-- business.VacationDestinationPackageService : vacationDestinationPackageService
  repository.VacationDestinationPackageRepository o-- repository.VacationDestinationRepository : vacationDestinationRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
